Moved generated code to .build/generated.php

--- a/build
+++ b/build
@@ -83,15 +83,15 @@ java -jar .build/closure.jar --js comp.js --js_output_file min.js
 [ ! -d 'sc' ] && mkdir sc
 
 echo "Generating PHP for Shortcodes..."
-echo '<? ' > sc/.php
+echo '<? ' > .build/sc.php
 for i in $shortcodes ; do
 	if [ -e sc/$i/$i.php ] ; then
-		echo "include('$i/$i.php');" >> sc/.php
+		echo "include('$i/$i.php');" >> .build/sc.php
 	else if [ -e $backend/sc/$i/$i.php ] ; then
-		echo "include('$backend/sc/$i/$i.php');" >> sc/.php
+		echo "include('$backend/sc/$i/$i.php');" >> .build/sc.php
 	fi fi
 done
-echo -n ' ?>' >> sc/.php
+echo -n ' ?>' >> .build/sc.php
 
 
 cleanup
